--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==3.0.3
-pandas==2.2.2
-numpy==1.26.4
-requests==2.32.3
-python-dateutil==2.9.0.post0
+flask
+requests
+pandas
+numpy
+ta
+gunicorn
